Fix alignment

--- a/sass/team.scss
+++ b/sass/team.scss
@@ -16,12 +16,12 @@
     grid-template-columns: 1fr 1fr;
   }
 
-  @media (min-width: $devices-min-width-lg) {
+  /*@media (min-width: $devices-min-width-lg) {
     grid-template-columns: 1fr 1fr 1fr;
-  }
+  }*/
 
   @media (min-width: $devices-min-width-xl) {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 
   &__member {
